tests/ui/limits/issue-55878.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: values of the type `[u8; usize::MAX]` are too big for the target architecture
   |
note: inside `std::mem::size_of::<[u8; usize::MAX]>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
note: inside `main`
  --> $DIR/issue-55878.rs:7:26
   |
LL |     println!("Size: {}", std::mem::size_of::<[u8; u64::MAX as usize]>());
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
